Update Add new sections

--- a/index.html
+++ b/index.html
@@ -32,7 +32,48 @@
 
 
     <!---Slider section starts here-->
-    
+
+    <div class="home" id="home">
+        <div class="home-slider">
+            <div class="wrapper">
+                <div class="slide slide1">
+                    <div class="content">
+                        <img src="" alt="">
+                        <h3>delicious royale</h3>
+                        <p>
+                            Give away to your beloved customers
+                        </p>
+                        <a href="#" class="btn">Order Now</a>
+                    </div>
+                </div>
+
+                <div class="slide slide2">
+                    <div class="content">
+                        <img src="" alt="">
+                        <h3>Sales 10% off</h3>
+                        <h1>The product</h1>
+                        <p>
+                            Browse our catlogue
+                        </p>
+                        <a href="#" class="btn">Order Now</a>
+                    </div>
+                </div>
+
+                <div class="slide slide1">
+                    <div class="content">
+                        <img src="" alt="">
+                        <h3>We are open</h3>
+                        <h1>New products</h1>
+                        <p>
+                            You will love it
+                        </p>
+                        <a href="#" class="btn">Order Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!---Slider section ends here-->
 
 
